<resources>
    <string name="app_name">Magarpatta Citizen App</string>
    <string name="action_search">Search</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--  Menu List -->

    <string name="menu_home">Home</string>
    <string name="menu_complaint_registration">Complaint Registration</string>
    <string name="menu_my_infra_info">My Infra Info</string>
    <string name="menu_club_house_info">ClubHouse Info</string>
    <string name="menu_activity">Activity</string>
    <string name="menu_standard">Standard Proceedures</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_committees">Committees</string>
    <string name="menu_council">Council</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_suggestion">Suggestion</string>
    <string name="menu_news_letter">News Letter</string>
    <string name="menu_contact">Emergency Contacts</string>


</resources>
